--- a/about.html
+++ b/about.html
@@ -7,8 +7,9 @@
 	<body>
 		<p><a href="./index.html">首页</a> | <a href="./about.html">关于我们</a></p>
 		<div>
-			<h1>联系方式</h1>
-			<p>13653909139</p>
+			<h1>关于我们</h1>
+			<p>tel:13345678901</p>
+			<p>QQ:12345678</p>
 		</div>
 	</body>
 </html>
