--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 		<p><a href="./index.html">首页</a> | <a href="./about.html">关于我们</a></p>
 		<div>
 			<h1>首页页面</h1>
+			<p>不好意思，你的消息泄露了</p>
 		</div>
 	</body>
 </html>
